@@ -312,20 +312,6 @@ name|IOException
 block|{
 if|if
 condition|(
-operator|(
-name|Constants
-operator|.
-name|WINDOWS
-operator|||
-name|Constants
-operator|.
-name|SUN_OS
-operator|||
-name|Constants
-operator|.
-name|LINUX
-operator|)
-operator|&&
 name|Constants
 operator|.
 name|JRE_IS_64BIT
